typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts.stderr
error: TS1042
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts:3:3
  |
3 |   public get foo() { }
  |   ^^^^^^

error: GetterPropWithoutReturn {
    span: Span {
        lo: BytePos(
            41,
        ),
        hi: BytePos(
            44,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts:3:14
  |
3 |   public get foo() { }
  |              ^^^

